--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "react-dom": "^17.0.1",
     "react-hls-player": "^1.1.0",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "save": "^2.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
